6.nginx-ingress-controller-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress
      #nodeSelector:
      #  role: master
      volumes:
        - name: nginx-tmpl
          configMap:
            name: nginx-tmpl
      containers:
      #- image: nginx/nginx-ingress:edge
      - image: nginx/nginx-ingress:1.8.1-alpine
        imagePullPolicy: IfNotPresent
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        volumeMounts:
        - name: nginx-tmpl
          mountPath: /nginx.tmpl
          subPath: nginx.tmpl
        args:
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config-custom
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
         #- -v=3 # Enables extensive logging. Useful for trooublshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-leader-election
      #tolerations:                                                                                                 
      #- effect: NoSchedule                                                                                         
      #  key: node-role.kubernetes.io/master
      #  operator: Equal                                                                         
      #  #value: master
